--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
         <i class="fa fa-shopping-cart fa-2x me-5 text-dark"></i>
         <div class="cart-no">5</div>
       </a>
-      <a href="" class="btn btn-outline-secondary me-2">Login</a>
+      <a href="" class="btn btn-success me-2">Login</a>
       <a href="" class="btn btn-outline-secondary me-3">Sign Up</a>
     </div>
   </header>
