End of section 10

--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -11,8 +11,8 @@
       <div class="btn-group mt-auto">
         <button class="btn btn-outline-secondary me-2">
             <span class="fa fa-shopping-cart"></span>
-        </button>
-        <button class="btn btn-outline-secondary">View</button>
+        </button> 
+        <button routerLink="/shop/{{product.id}}" class="btn btn-outline-secondary">View</button>
       </div>
     
     </div>
